syntax = "proto3";
package amaymon.nature;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "amaymon/x/nature/types";

// Msg defines the Msg service.
service Msg {
      rpc AddAccount(MsgAddAccount) returns (MsgAddAccountResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgAddAccount {
  string creator = 1;
  string amount = 2;
  string toAccount = 3;
}

message MsgAddAccountResponse {
}

// this line is used by starport scaffolding # proto/tx/message
